--- a/src/components/Panel/Panel.module.css
+++ b/src/components/Panel/Panel.module.css
@@ -1,4 +1,5 @@
 main {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -47,6 +48,10 @@ h1 {
 }
 
 .block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
   @media only screen and (min-width: 768px) {
     width: calc((100% - 15px) / 2);
   }
