--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,8 @@
 .profile {
-  border-radius: 10px;
+  border-radius: 5px;
+  overflow: hidden;
   background-color: #fff;
-  box-shadow: 5px 5px 5px 5px #888888;
+  box-shadow: 2px 2px 2px 2px #888888;
 }
 
 .description {
@@ -36,8 +37,6 @@
   justify-content: center;
   background-color: grey;
   overflow: hidden;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 .stats li {
