--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -3,6 +3,7 @@
   border-radius: 5px;
   overflow: hidden;
   background-color: white;
+  box-shadow: 2px 2px 2px 2px #888888;
 }
 
 .transaction_history tr {
