--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,4 +3,20 @@
   flex-direction: column;
   gap: 10px;
   border-radius: 5px;
+
+  @media only screen and (max-width: 374.98px) {
+    width: 100%;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 355px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: calc((100% - 20px) / 2);
+  }
+
+  @media only screen and (min-width: 1280px) {
+    width: calc((100% - 60px) / 4);
+  }
 }
