--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,8 +1,23 @@
 .profile {
   border-radius: 5px;
-  overflow: hidden;
   background-color: #fff;
   box-shadow: 2px 2px 2px 2px #888888;
+
+  @media only screen and (max-width: 374.98px) {
+    width: 100%;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 355px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: calc((100% - 20px) / 2);
+  }
+
+  @media only screen and (min-width: 1280px) {
+    width: calc((100% - 60px) / 4);
+  }
 }
 
 .description {
