--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -4,6 +4,22 @@
   overflow: hidden;
   background-color: white;
   box-shadow: 2px 2px 2px 2px #888888;
+
+  @media only screen and (max-width: 374.98px) {
+    width: 100%;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 355px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: calc((100% - 20px) / 2);
+  }
+
+  @media only screen and (min-width: 1280px) {
+    width: calc((100% - 60px) / 4);
+  }
 }
 
 .transaction_history tr {
