--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,60 @@ input,
 textarea {
   cursor: pointer;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+
+  @media only screen and (max-width: 374.98px) {
+    max-width: 375px;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 375px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: 768px;
+
+    flex-direction: row;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media only screen and (min-width: 1280px) {
+    width: 1280px;
+  }
+}
+
+.statistics {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  @media only screen and (max-width: 374.98px) {
+    width: 100%;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 355px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: calc((100% - 20px) / 2);
+  }
+
+  @media only screen and (min-width: 1280px) {
+    width: calc((100% - 60px) / 4);
+  }
+}
