--- a/src/index.css
+++ b/src/index.css
@@ -91,16 +91,36 @@ textarea {
   padding-right: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
+}
 
-  @media only screen and (max-width: 374.98px) {
+.statistics {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media only screen and (max-width: 374.98px) {
+  #root {
     max-width: 375px;
   }
 
-  @media only screen and (min-width: 375px) {
+  .statistics {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 375px) {
+  #root {
     width: 375px;
   }
 
-  @media only screen and (min-width: 768px) {
+  .statistics {
+    width: 355px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #root {
     width: 768px;
 
     flex-direction: row;
@@ -109,29 +129,17 @@ textarea {
     padding-bottom: 20px;
   }
 
-  @media only screen and (min-width: 1280px) {
-    width: 1280px;
+  .statistics {
+    width: calc((100% - 20px) / 2);
   }
 }
 
-.statistics {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-
-  @media only screen and (max-width: 374.98px) {
-    width: 100%;
+@media only screen and (min-width: 1280px) {
+  #root {
+    width: 1280px;
   }
 
-  @media only screen and (min-width: 375px) {
-    width: 355px;
-  }
-
-  @media only screen and (min-width: 768px) {
-    width: calc((100% - 20px) / 2);
-  }
-
-  @media only screen and (min-width: 1280px) {
+  .statistics {
     width: calc((100% - 60px) / 4);
   }
 }
